--- a/src/static/attacker.html
+++ b/src/static/attacker.html
@@ -7,7 +7,7 @@
 
   <script>
     function test() {
-      let url = 'http://georgetian.com:8880/static/
+      let url = 'http://georgetian.com:8880/static/logo.png'
       fetch(url).then(function(response) {
         return response.json();
       }).then(function(data) {
