--- a/src/static/attacker.html
+++ b/src/static/attacker.html
@@ -9,10 +9,13 @@
     function test() {
       let url = 'http://georgetian.com:8880/static/logo.png'
       fetch(url).then(function(response) {
+        console.log('1111');
         return response.json();
       }).then(function(data) {
+        console.log('22222');
         console.log(data);
       }).catch(function() {
+        console.log('33333');
         console.log("Booo");
       });
     }
