--- a/src/static/attacker.html
+++ b/src/static/attacker.html
@@ -7,7 +7,7 @@
 
   <script>
     function test() {
-      let url = 'http://georgetian.com:8880/static/logo.png'
+      let url = 'http://georgetian.com:8880'
       fetch(url).then(function(response) {
         console.log('1111');
         return response.json();
