--- a/src/static/attacker.html
+++ b/src/static/attacker.html
@@ -7,7 +7,7 @@
 
   <script>
     function test() {
-      let url = 'http://georgetian.com:8880/static/logo.png'
+      let url = 'http://ibgang.com:8880/static/logo.png'
       const req = new XMLHttpRequest();
       req.open("GET", url, false);
       let resp = req.send();
