--- a/src/static/attacker.html
+++ b/src/static/attacker.html
@@ -7,7 +7,7 @@
 
   <script>
     function test() {
-      let url = 'http://ibgang.com:8880/static/logo.png'
+      let url = 'http://ibgang.com:8880/static/img.png'
       const req = new XMLHttpRequest();
       req.open("GET", url, false);
       let resp = req.send();
@@ -17,7 +17,7 @@
 
 
   <body onload="test()">
-
+    <img src="http://ibgang.com:8880/static/img2.png">
     
   </body>
 </html>
