--- a/src/Response size leak.html
+++ b/src/Response size leak.html
@@ -56,7 +56,7 @@
 			}
 			
 			onload = () => {
-				sizeLoop("https://www.google.com/robots.txt", 8000);
+				sizeLoop("https://www.baidu.com/robots.txt", 4);
 			}
 	</script>
 </head>
