--- a/src/static/size.html
+++ b/src/static/size.html
@@ -7,7 +7,7 @@
 			if ("serviceWorker" in navigator) {
 				addEventListener("load", async () => {
 					performance.setResourceTimingBufferSize(1337);
-					const registration = await navigator.serviceWorker.register("serviceworker.js");
+					const registration = await navigator.serviceWorker.register("static/serviceworker.js");
 					if (registration.installing)
 						location.reload();
 				});
@@ -56,7 +56,7 @@
 			}
 			
 			onload = () => {
-				sizeLoop("https://www.baidu.com/robots.txt", 4);
+				sizeLoop("https://www.baidu.com/robots.txt", 300);
 			}
 	</script>
 </head>
