--- a/src/static/attacker.html
+++ b/src/static/attacker.html
@@ -19,7 +19,7 @@
 
 
   <body onload="test()">
-    <img src="http://ibgang.com:8880/static/img2.png">
+    <img src="http://georgetian.com:8880/static/img2.png">
     
   </body>
 </html>
