--- a/src/range/static/attacker.html
+++ b/src/range/static/attacker.html
@@ -34,7 +34,7 @@
     }
     
     onload = () => {
-      run('http://127.0.0.1:5001/static/robots.txt');
+      run('http://ibgang.com:10080/static/robots.txt');
     }
   </script>
 </head>
