--- a/src/range/static/attacker.html
+++ b/src/range/static/attacker.html
@@ -34,7 +34,7 @@
     }
     
     onload = () => {
-      run('http://georgetian.com:8880/static/robots.txt');
+      run('http://georgetian.com:8880');
     }
   </script>
 </head>
