--- a/src/range/static/attacker.html
+++ b/src/range/static/attacker.html
@@ -2,7 +2,6 @@
   <title>Response size leak</title>
   <script>
     
-
     async function get_diff(url, status) {
       let start = performance.getEntries().length;
       let sound = document.createElement('audio');
@@ -11,9 +10,10 @@
       return new Promise((resolve) => {
         sound.onerror = () => {
           let end = performance.getEntries().length;
-          return resolve(end - start);
+          return resolve(performance.getEntries());
         }
       });
+
     }
 
 
