--- a/src/range/static/attacker.html
+++ b/src/range/static/attacker.html
@@ -10,8 +10,8 @@
       return new Promise((resolve) => {
         sound.onerror = () => {
           let end = performance.getEntries().length;
-          let entries = performance.getEntries()
-          return resolve(entries[entries.length() - 1]);
+          let entries = performance.getEntries();
+          return resolve(entries[entries.length - 1]);
         }
       });
 
