--- a/src/range/attacker.html
+++ b/src/range/attacker.html
@@ -25,7 +25,7 @@
     }
     
     onload = () => {
-      run('http://georgetian.com:8880/');
+      run('http://ibgang.com:8880/static/robots.txt');
     }
   </script>
 </head>
