--- a/src/range-serviceworker/attacker.html
+++ b/src/range-serviceworker/attacker.html
@@ -46,7 +46,7 @@
 					writeResult(url, sizeGuess, "more than ", "red");
 					sizeLoop(url, ++sizeGuess);
 				} else {
-					writeResult(url, sizeGuess, "", "green");
+					writeResult(url, sizeGuess, "", "red");
 				}
 			}
 
