--- a/src/range-serviceworker/attacker.html
+++ b/src/range-serviceworker/attacker.html
@@ -26,7 +26,8 @@
 			}
 			
 			onload = () => {
-				singleSizeCheck("https://www.baidu.com/robots.txt", 1);
+				let diff = singleSizeCheck("https://www.baidu.com/robots.txt", 1);
+        console.log(diff);
 			}
 
     </script>
