--- a/src/range-serviceworker/attacker.html
+++ b/src/range-serviceworker/attacker.html
@@ -24,13 +24,13 @@
 				return new Promise((resolve) => {
           sound.onload = () => {
             let diff = performance.getEntries().length - start;
-            document.body.innerHTML += url + 'onload' + diff;
+            document.body.innerHTML += url + 'onload' + diff + '<br>';
 						return resolve(diff);
           }
 
 					sound.onerror = () => {
 						let diff = performance.getEntries().length - start;
-            document.body.innerHTML += url + 'onerror' + diff;
+            document.body.innerHTML += url + 'onerror' + diff + '<br>';
 						return resolve(diff);
 					}
 				});
