--- a/src/range-serviceworker/attacker.html
+++ b/src/range-serviceworker/attacker.html
@@ -33,9 +33,9 @@
 			
 			onload = () => {
 				singleSizeCheck("https://www.baidu.com/robots.txt", 1);
-        singleSizeCheck("https://www.baidu.com/asdf", 1);
-        singleSizeCheck("https://www.baidu.com/robots.txt", 1);
-        singleSizeCheck("https://www.baidu.com/asdf", 1);
+        //singleSizeCheck("https://www.baidu.com/asdf", 1);
+        //singleSizeCheck("https://www.baidu.com/robots.txt", 1);
+        //singleSizeCheck("https://www.baidu.com/asdf", 1);
 			}
 
     </script>
