--- a/src/range-serviceworker/attacker.html
+++ b/src/range-serviceworker/attacker.html
@@ -32,8 +32,8 @@
 			}
 			
 			onload = () => {
-				singleSizeCheck("https://www.baidu.com/robots.txt", 1);
-        //singleSizeCheck("https://www.baidu.com/asdf", 1);
+				//singleSizeCheck("https://www.baidu.com/robots.txt", 1);
+        singleSizeCheck("https://www.baidu.com/asdf", 1);
         //singleSizeCheck("https://www.baidu.com/robots.txt", 1);
         //singleSizeCheck("https://www.baidu.com/asdf", 1);
 			}
