--- a/src/range-serviceworker/attacker.html
+++ b/src/range-serviceworker/attacker.html
@@ -36,14 +36,13 @@
 			}
 
       async function run() {
-        
+				console.log('1');
+
+        singleSizeCheck("https://www.baidu.com/asdf", 1);
       }
 			
-			async function on_load() {
-				console.log('1');
-        await setTimeout(null, 10000);
-        console.log('2');
-        singleSizeCheck("https://www.baidu.com/asdf", 1);
+			onload = () => {
+        setTimeout(run, 1000);
 			}
 
     </script>
