--- a/src/range-serviceworker/attacker.html
+++ b/src/range-serviceworker/attacker.html
@@ -32,8 +32,8 @@
       }
 
       function run() {
-        setTimeout(singleSizeCheck("https://www.baidu.com/asdf", 1), 1000);
-        setTimeout(singleSizeCheck("https://www.baidu.com/robots.txt", 1), 2000);
+        setTimeout(console.log('1'), 1000);
+        setTimeout(console.log('2'), 2000);
       }
       
       onload = () => {
