--- a/src/range-serviceworker/attacker.html
+++ b/src/range-serviceworker/attacker.html
@@ -33,7 +33,7 @@
 
       function run() {
         setTimeout(console.log('1'), 1000);
-        setTimeout(console.log('2'), 2000);
+        setTimeout(singleSizeCheck('https://www.baidu.com/robots.txt', 1), 2000);
       }
       
       onload = () => {
