--- a/src/range-serviceworker/attacker.html
+++ b/src/range-serviceworker/attacker.html
@@ -32,8 +32,8 @@
       }
 
       function run() {
-        setTimeout(console.log('1'), 1000);
-        setTimeout(singleSizeCheck, 2000, 'https://www.baidu.com/robots.txt', 1);
+        setTimeout(singleSizeCheck, 1000, 'https://www.baidu.com/robots.txt', 1);
+        setTimeout(singleSizeCheck, 2000, 'https://www.baidu.com/asdfas', 1);
       }
       
       onload = () => {
