--- a/src/range-serviceworker/attacker.html
+++ b/src/range-serviceworker/attacker.html
@@ -15,8 +15,8 @@
       function singleSizeCheck(url, size) {
         let start = performance.getEntries().length;
         let element = document.createElement("embed");
-        element.type = 'text';
-        element.src = `${url}?size=${size}`;
+        element.type = 'html/text';
+        element.src = `${url}?size=1`;
         return new Promise((resolve) => {
           element.onload = () => {
             let diff = performance.getEntries().length - start;
@@ -35,6 +35,7 @@
       function run() {
         setTimeout(singleSizeCheck, 1000, 'https://www.baidu.com/robots.txt', 1);
         setTimeout(singleSizeCheck, 2000, 'https://www.baidu.com/asdfas', 1);
+        setTimeout(console.log(performance.entries()), 300);
       }
       
       onload = () => {
