--- a/src/range-serviceworker/attacker.html
+++ b/src/range-serviceworker/attacker.html
@@ -35,7 +35,7 @@
       function run() {
         setTimeout(singleSizeCheck, 1000, 'https://www.baidu.com/robots.txt', 1);
         setTimeout(singleSizeCheck, 2000, 'https://www.baidu.com/asdfas', 1);
-        setTimeout(console.log(performance.getEntries()), 300);
+        setTimeout(console.log, 3000, performance.getEntries());
       }
       
       onload = () => {
