--- a/src/range-serviceworker/attacker.html
+++ b/src/range-serviceworker/attacker.html
@@ -34,6 +34,7 @@
       function run() {
         setTimeout(singleSizeCheck, 1000, 'https://www.baidu.com/robots.txt', 1);
         setTimeout(singleSizeCheck, 2000, 'https://www.baidu.com/asdfas', 1);
+        setTimeout(singleSizeCheck, 3000, 'https://www.baidu.com/favicon.ico', 1);
         setTimeout(console.log, 3000, performance.getEntries());
       }
       
