--- a/src/range-serviceworker/attacker.html
+++ b/src/range-serviceworker/attacker.html
@@ -44,12 +44,12 @@
 
   <body>
     <table id="res">
-      <th>
-        <td>URL</td>
-        <td>Size</td>
-        <td>Event</td>
-        <td>Entries</td>
-      </th>
+      <tr>
+        <th>URL</th>
+        <th>Size</th>
+        <th>Event</th>
+        <th>Entries</th>
+      </tr>
     </table>
   </body>
 
