--- a/src/range-serviceworker/attacker.html
+++ b/src/range-serviceworker/attacker.html
@@ -37,7 +37,7 @@
         }
         let i = 1
         for (url in resources) {
-          setTimeout(get, i * 1000, key, resources[url]);
+          setTimeout(get, i * 1000, url, resources[url]);
           i++;
         }
       }
