--- a/src/range-serviceworker/attacker.html
+++ b/src/range-serviceworker/attacker.html
@@ -42,7 +42,7 @@
           1,
           100000000,
         ]
-        for (let i = 0; i < urls.lengthl; i++) {
+        for (let i = 0; i < urls.length; i++) {
           setTimeout(get, i * 1000, urls[i], sizes[i]);
         }
       }
