--- a/src/range-serviceworker/attacker.html
+++ b/src/range-serviceworker/attacker.html
@@ -43,7 +43,7 @@
           100000000,
         ]
         for (let i = 0; i < urls.length; i++) {
-          setTimeout(get, i * 1000, urls[i], sizes[i]);
+          setTimeout(get, (i + 1) * 1000, urls[i], sizes[i]);
         }
       }
       
