--- a/src/range-serviceworker/attacker.html
+++ b/src/range-serviceworker/attacker.html
@@ -12,6 +12,10 @@
         });
       }
 
+      function show(url, size, event, diff) {
+        document.getElementById('res').innerHTML += `<tr><td>${url}</td><td>${size}</td><td>${event}</td><td>${diff}</td><tr>`;
+        console.log(performance.getEntries());
+      }
       function get(url, size) {
         let start = performance.getEntries().length;
         let element = document.createElement('img');
@@ -19,13 +23,11 @@
 
         element.onload = () => {
           let diff = performance.getEntries().length - start;
-          document.getElementById('res').innerHTML += `<tr><td>${url}</td><td>${size}</td><td>onload</td><td>${diff}</td><tr>`;
-          console.log(performance.getEntries());
+          show(url, size, 'onload', diff);
         }
         element.onerror = () => {
           let diff = performance.getEntries().length - start;
-          document.getElementById('res').innerHTML += `<tr><td>${url}</td><td>${size}</td><td>onerror</td><td>${diff}</td><tr>`;
-          console.log(performance.getEntries());
+          show(url, size, 'onerror', diff);
         }
       }
 
