--- a/src/range-serviceworker/attacker.html
+++ b/src/range-serviceworker/attacker.html
@@ -4,12 +4,15 @@
     <title>Response size leak</title>
     <script>
       if ("serviceWorker" in navigator) {
+        console.log('if');
         addEventListener("load", async () => {
           performance.setResourceTimingBufferSize(1337);
           const registration = await navigator.serviceWorker.register("static/serviceworker.js");
           if (registration.installing)
             location.reload();
         });
+      } else {
+        console.log('else');
       }
 
       function show(url, size, event, diff) {
