--- a/src/range-serviceworker/attacker.html
+++ b/src/range-serviceworker/attacker.html
@@ -56,7 +56,7 @@
         let req = new XMLHttpRequest();
         req.open('GET', 'https://www.baidu.com/robots.txt');
         req.send();
-        run();
+        //run();
       }
 
     </script>
