--- a/src/range-serviceworker/attacker.html
+++ b/src/range-serviceworker/attacker.html
@@ -53,10 +53,7 @@
       }
       
       onload = () => {
-        let req = new XMLHttpRequest();
-        req.open('GET', 'https://www.baidu.com/robots.txt');
-        req.send();
-        //run();
+        run();
       }
 
     </script>
