--- a/src/range-serviceworker/attacker.html
+++ b/src/range-serviceworker/attacker.html
@@ -6,9 +6,9 @@
 
       addEventListener("load", async () => {
         performance.setResourceTimingBufferSize(1337);
-        //const registration = await navigator.serviceWorker.register('/range-serviceworker/serviceworker.js');
-        //if (registration.installing)
-          //location.reload();
+        const registration = await navigator.serviceWorker.register('/range-serviceworker/serviceworker.js');
+        if (registration.installing)
+          location.reload();
       });
 
       function show(url, size, event, diff) {
