--- a/src/range-serviceworker/attacker.html
+++ b/src/range-serviceworker/attacker.html
@@ -14,7 +14,7 @@
 			}
 
       function show(url, size, event, diff) {
-        document.getElementById('res').innerHTML += `<tr><td>${url}</td><td>${size}</td><td>${event}</td><td>${diff}</td><tr>`;
+        document.getElementById('tbody').innerHTML += `<tr><td>${url}</td><td>${size}</td><td>${event}</td><td>${diff}</td><tr>`;
         console.log(performance.getEntries());
       }
 
@@ -63,13 +63,18 @@
   </head>
 
   <body>
-    <table id="res">
-      <tr>
-        <th>URL</th>
-        <th>Size</th>
-        <th>Event</th>
-        <th>Entries</th>
-      </tr>
+    <table>
+      <thead>
+        <tr>
+          <th>URL</th>
+          <th>Size</th>
+          <th>Event</th>
+          <th>Entries</th>
+        </tr>
+      </thead>
+      <tbody id="tbody">
+
+      </tbody>
     </table>
   </body>
 
