--- a/src/range-serviceworker/attacker.html
+++ b/src/range-serviceworker/attacker.html
@@ -13,21 +13,21 @@
 				});
 			}
 
-      function show(url, size, event, diff) {
+      function show(element, url, size, event, diff) {
         document.getElementById('tbody').innerHTML += `<tr><td>${url}</td><td>${size}</td><td>${event}</td><td>${diff}</td><tr>`;
         console.log(performance.getEntries());
       }
 
-      function get(url, size) {
+      function get(element, url, size) {
         let start = performance.getEntries().length;
-        let element = document.createElement('audio');
-        element.src = `${url}?size=${size}&${Math.random()}`;
+        let e = document.createElement(element);
+        e.src = `${url}?size=${size}&${Math.random()}`;
 
-        element.onload = () => {
+        e.onload = () => {
           let diff = performance.getEntries().length - start;
           show(url, size, 'onload', diff);
         }
-        element.onerror = () => {
+        e.onerror = () => {
           let diff = performance.getEntries().length - start;
           show(url, size, 'onerror', diff);
         }
@@ -50,8 +50,14 @@
           1,
           2800,
         ]
-        for (let i = 0; i < urls.length; i++) {
-          setTimeout(get, (i + 1) * 1000, urls[i], sizes[i]);
+        elements = [
+          'img',
+          'audio',
+        ]
+        for (element in elements) {
+          for (let i = 0; i < urls.length; i++) {
+            setTimeout(get, (i + 1) * 1000, urls[i], sizes[i]);
+          }
         }
       }
       
@@ -66,6 +72,7 @@
     <table>
       <thead>
         <tr>
+          <th>Element</th>
           <th>URL</th>
           <th>Size</th>
           <th>Event</th>
