--- a/src/range-serviceworker/attacker.html
+++ b/src/range-serviceworker/attacker.html
@@ -14,7 +14,7 @@
 			}
 
       function show(element, url, size, event, diff) {
-        document.getElementById('tbody').innerHTML += `<tr><td>${url}</td><td>${size}</td><td>${event}</td><td>${diff}</td><tr>`;
+        document.getElementById('tbody').innerHTML += `<tr><td>${element}</td><td>${url}</td><td>${size}</td><td>${event}</td><td>${diff}</td><tr>`;
         console.log(performance.getEntries());
       }
 
@@ -25,11 +25,11 @@
 
         e.onload = () => {
           let diff = performance.getEntries().length - start;
-          show(url, size, 'onload', diff);
+          show(element, url, size, 'onload', diff);
         }
         e.onerror = () => {
           let diff = performance.getEntries().length - start;
-          show(url, size, 'onerror', diff);
+          show(element, url, size, 'onerror', diff);
         }
       }
 
@@ -54,9 +54,9 @@
           'img',
           'audio',
         ]
-        for (element in elements) {
+        for (const element of elements) {
           for (let i = 0; i < urls.length; i++) {
-            setTimeout(get, (i + 1) * 1000, urls[i], sizes[i]);
+            setTimeout(get, (i + 1) * 1000, element, urls[i], sizes[i]);
           }
         }
       }
@@ -66,6 +66,13 @@
       }
 
     </script>
+
+    <style>
+      table, th, td {
+        border: 1px solid black;
+        border-collapse: collapse;
+      }
+    </style>
   </head>
 
   <body>
