--- a/src/range-serviceworker/attacker.html
+++ b/src/range-serviceworker/attacker.html
@@ -54,10 +54,11 @@
           'img',
           'audio',
         ]
-        
-        for (let i = 0; i < urls.length; i++) {
-          for (const element of elements) {
-            setTimeout(get, (i + 1) * 1000, element, urls[i], sizes[i]);
+        let wait = 1;
+        for (const element of elements) {
+          for (let i = 0; i < urls.length; i++) {
+            setTimeout(get, wait * 1000, element, urls[i], sizes[i]);
+            wait++;
           }
         }
       }
