--- a/src/range-serviceworker/attacker.html
+++ b/src/range-serviceworker/attacker.html
@@ -51,8 +51,15 @@
           2800,
         ]
         elements = [
-          'img',
           'audio',
+          'embed',
+          'iframe',
+          'img',
+          'input',
+          'script',
+          'source',
+          'track',
+          'video',
         ]
         let wait = 1;
         for (const element of elements) {
