--- a/src/range-serviceworker/attacker.html
+++ b/src/range-serviceworker/attacker.html
@@ -54,6 +54,7 @@
           'audio',
           'embed',
           'iframe',
+          'frame',
           'img',
           'input',
           'script',
