--- a/src/range-serviceworker/attacker.html
+++ b/src/range-serviceworker/attacker.html
@@ -53,11 +53,11 @@
         elements = [
           'audio',
           //'embed',
-          'iframe',
+          //'iframe',
           //'frame',
           'img',
           //'input',
-          'script',
+          //'script',
           //'source',
           //'track',
           'video',
